[package]
name = "ipdom"
version = "0.1.0"
authors = ["ank3r <mwangishadrack5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
xml-parser = {git = "https://github.com/shaddyshad/xml-parser.git"}
regex = "1"