[package]
name = "ipdom"
version = "0.1.0"
authors = ["ank3r <mwangishadrack5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="xmltodom"
crate-type=["cdylib"]

[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]

[dependencies] 
xml-parser = {git = "https://github.com/shaddyshad/xml-parser.git"}
regex = "1"

